--- a/test/fixture.html
+++ b/test/fixture.html
@@ -24,12 +24,12 @@
     <div id="qunit-fixture">
 
         <div id="horizontalTab">
-            <ul>
-                <li><a href="#tab-1">Responsive Tab-1</a></li>
-                <li><a href="#tab-2">Responsive Tab-2</a></li>
-                <li><a href="#tab-3">Responsive Tab-3</a></li>
-                <li><a href="#tab-4">Responsive Tab-4</a></li>
-                <li><a href="#tab-5">Responsive Tab-5</a></li>
+            <ul class="r-tabs-nav">
+                <li class="r-tabs-tab"><a href="#tab-1">Responsive Tab-1</a></li>
+                <li class="r-tabs-tab"><a href="#tab-2">Responsive Tab-2</a></li>
+                <li class="r-tabs-tab"><a href="#tab-3">Responsive Tab-3</a></li>
+                <li class="r-tabs-tab"><a href="#tab-4">Responsive Tab-4</a></li>
+                <li class="r-tabs-tab"><a href="#tab-5">Responsive Tab-5</a></li>
             </ul>
 
             <div id="tab-1">
